<resources>
    <string name="app_name">TrackingApplication</string>
    <string name="action_settings">Settings</string>
    <string name="show_timetable">Show Timetable</string>
    <string name="show_timetable_with_map">Show Timetable With Map</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="email">Email Locations</string>
    <string name="email_after_record">Email After Recording </string>
    <string name="server_log">Log To Server:  </string>
    <string name="duration">Duration: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="subject">Subject: </string>
    <string name="body">Body: </string>
    <string name="reset">Reset Values</string>
    <string name="notify">Notify Locations</string>
    <string name="user_location">Go To User Location</string>
    <string name="location">Location</string>
    <string name="coordinates">Coordinates</string>
    <string name="my_location">My Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="reason">Reason</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="time_format">HH:MM</string>
    <string name="location_format">Number-Street-Suburb</string>
    <string name="about_me">About:</string>

    <string-array name="reasons">
        <item>Work</item>
        <item>Meeting</item>
        <item>Gym</item>
        <item>Home</item>
        <item>Other</item>
    </string-array>
    <string-array name="intervals">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
        <item>80</item>
    </string-array>
    <string name="interval">Interval:</string>
    <string name="home">Home</string>
    <string name="create_entry">Create Entry</string>
    <string name="clear_entry">Clear Entry</string>
    <string name="create_table">Create Table</string>
    <string name="title_activity_show_user_location">Map</string>
    <string name="title_activity_go_to_specific_location">Map</string>
    <string name="title_activity_go_to_location_fragment">Map</string>
    <string name="title_activity_go_to_location">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tracking_preferences">Tracking Preferences</string>
    <string name="about">About</string>
    <string name="contribute">Contribute</string>
    <string name="contribution_description">If you would like to contribute to the project then please head to: https://github.com/phealeyh/tracking-application </string>
    <string name="about_description">Copyright 2016 Phealey Hang</string>
    <string name="about_app">This is the first version of the Tracking Application created by Phealey Hang.
    This Application is of course, still evolving and I encourage anyone to send bug reports or ideas for improvements to me
        on Phealey.Hang@alumni.uts.edu.au
    </string>
    <string name="timer_settings">Timer Settings</string>
    <string name="preference_time_format_title">Time Format</string>
    <string name="preference_hour_format">Hours</string>
    <string name="preference_minute_format">Minutes</string>
    <string name="preference_second_format">Seconds</string>
    <string name="preference_first_duration">15</string>
    <string name="preference_second_duration">30</string>
    <string name="preference_third_duration">45</string>
    <string name="preference_fourth_duration">60</string>
    <string name="preference_first_interval">5</string>
    <string name="preference_second_interval">10</string>
    <string name="preference_third_interval">15</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>


    <string-array name="preference_time_settings">
        <item>@string/preference_second_format</item>
        <item>@string/preference_minute_format</item>
    </string-array>


    <string-array name="preference_duration">
        <item>@string/preference_first_duration</item>
        <item>@string/preference_second_duration</item>
        <item>@string/preference_third_duration</item>
        <item>@string/preference_fourth_duration</item>
    </string-array>

    <string-array name="preference_interval">
        <item>@string/preference_first_interval</item>
        <item>@string/preference_third_interval</item>
    </string-array>

    <string-array name="interval_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="duration_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="time_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="open_location_settings">Location Settings</string>
    <string name="Cancel">Cancel</string>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_show_map_with_timetable">Map</string>
    <string name="title_activity_hello">Map</string>

</resources>
