<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tracking.id11723222.com.trackingapplication.AboutPageActivity">


    <TextView
        android:text="@string/about_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutView"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/contribution_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contributeDetailsView"
        android:layout_below="@+id/aboutView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:text="@string/contribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contributionView"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/contributeDetailsView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appDescriptionView"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/contributionView"
        android:layout_alignParentStart="true" />


</RelativeLayout>
