<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tracking.id11723222.com.trackingapplication.CreateTimetableActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/location_view"
        android:layout_alignBottom="@+id/location_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:id="@+id/date_view"
        android:layout_below="@+id/location_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time"
        android:id="@+id/time_view"
        android:layout_below="@+id/date_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reason"
        android:id="@+id/reason_view"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/location_field"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date_field"
        android:layout_above="@+id/time_view"
        android:layout_alignRight="@+id/location_field"
        android:layout_alignEnd="@+id/location_field" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/time_field"
        android:layout_alignBottom="@+id/time_view"
        android:layout_alignLeft="@+id/date_field"
        android:layout_alignStart="@+id/date_field"
        android:layout_alignRight="@+id/submit_button"
        android:layout_alignEnd="@+id/submit_button" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reason_box"
        android:spinnerMode="dropdown"
        android:entries="@array/reasons"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/time_field"
        android:layout_alignStart="@+id/time_field" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_box"
        android:spinnerMode="dropdown"
        android:entries="@array/time"
        android:layout_alignTop="@+id/time_view"
        android:layout_toRightOf="@+id/time_field"
        android:layout_toEndOf="@+id/time_field" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_entry"
        android:id="@+id/submit_button"
        android:onClick="onSubmitClicked"
        android:layout_below="@+id/reason_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_entry"
        android:id="@+id/clear_all_button"
        android:onClick="onClearClicked"
        android:layout_below="@+id/submit_button"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
